# panda_w_realsense

./: README.md
isaac_model/: panda.usd
panda_w_realsense_description/: CMakeLists.txt  package.xml
panda_w_realsense_description/launch/: panda_w_realsense_visualization.launch
panda_w_realsense_description/rviz/: panda_w_realsense.rviz
panda_w_realsense_description/urdf/: panda.urdf  panda_w_realsense.urdf.xacro  test.urdf.xacro
panda_w_realsense_description/world/: isdf_test.world
panda_w_realsense_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
panda_w_realsense_moveit_config/config/: fake_controllers.yaml  ompl_planning.yaml  panda.srdf  stomp_planning.yaml
panda_w_realsense_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  demo_isaac.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
panda_w_realsense_moveit_config/src/: test.py
